RStoolbox 0.2.0
=====================================
Fixes: 
* improved NA handling and faster implementation of mlc classifier (#32, pull request by Neal Fultz)


RStoolbox 0.1.10
=====================================
Fixes:
* fix tests for upcoming raster version

RStoolbox 0.1.9
=====================================
Fixes:
* adapt to new caret version
* fix `readEE` for new EarthExplorer formats
* corrected sign of greenness `tasseledCap` coefficient for Landsat5 TM band 1 (reported by Thomas Day)
* adapt `readMeta` and `stackMeta` to new Landsat collection 1 metadata

RStoolbox 0.1.8
=====================================
New:
* `spectralIndices()` can now apply a mask internally, e.g. to exclude cloud pixels. New arguments are: 
   `maskLayer` and `maskValue` (suggested by Andrea Hess).   
* added spectral index GNDWI   

Fixes: 
* update `readEE()` to deal with new EarthExplorer export columns (reported by Christian Bauer)

RStoolbox 0.1.7
=====================================
New:
* `spectralIndices()` has a new argument skipRefCheck, which skips the heuristic check for reflectance-like values [0,1] which is run if EVI/EVI2 are requested.
   This can be usefull if clouds with reflectance > 1.5 are part of the image.
* `superClass()` now returns the geometries which were used for validation, e.g. polygons (under $validation$geometry)
   and also the exact samples taken for validation including cell number and coordinates ($validation$validationSamples)
*  added example data-set for spectral library see ?readSLI
*  increased overall test coverage 

Changes:
* ESUN lookup tables for `radCor()` are adjusted to match current USGS reccomendations from: https://landsat.usgs.gov/esun
* `spectralIndices()` swir wavelength ranges are now defined consistently and correctly. 
   Bands formerly provided as swir1 (version <1.7.0) should now (>=1.7.0) be provided as swir2 and former swir2 as swir3 respectively (see docu). 