@@ -107,6 +107,7 @@ importFrom(stats,loadings)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,princomp)
+importFrom(stats,setNames)
 importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(utils,read.csv)
